# redpanda-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
config/: configure_cluster.sh  console-config.yaml
config/proto/: simple.proto
src/: admin.rs  builder.rs  config.rs  consumer.rs  error.rs  lib.rs  metadata.rs  producer.rs  tests.rs
