[package]
name = "redpanda"
version = "0.2.12"
authors = ["Colin Dablain"]
description = "A crate for interacting with Redpanda Message Brokers"
readme = "README.md"
repository = "https://github.com/DayOfThePenguin/redpanda-rs"
license = "Apache-2.0"
keywords = ["redpanda", "kafka", "redpanda-rs"]
categories = ["api-bindings"]
exclude = ["Cargo.lock"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
# pin to version of rdkafka that's passed CI, uses most recent version of librdkafka, but hasn't been merged into the
# main branch of rdkafka. 0.28 doesn't have tracing support, so until a new rdkafka version is published, this package will
# only be able to be built from the git repo
rdkafka = {git = "https://github.com/gyfis/rust-rdkafka", branch = "g/librdkafka-1.9.0", features = ["zstd", "tracing", "cmake-build", "zstd-pkg-config"]}
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
thiserror = "1"

[dev-dependencies]
tracing-test = "0.1"
rand = "0.8"